# rcc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  agent.md
.cargo/: config.toml
crates/rcc_ast/: Cargo.toml
crates/rcc_ast/src/: lib.rs  pretty.rs  visit.rs
crates/rcc_cfg/: Cargo.toml
crates/rcc_cfg/src/: build.rs  lib.rs  lower.rs  pretty.rs  verify.rs
crates/rcc_cfg/tests/: cfg.rs  pre_codegen_contract.rs
crates/rcc_cfg/tests/snapshots/cfg/: call_and_pointer.snap  edge_complex_conditional_conversion.snap  edge_goto_out_nested_scope.snap  eval_order_call_args.snap  eval_order_initializer_leaves.snap  if_else.snap  loop_break_continue.snap  switch_fallthrough.snap  vla_sizeof.snap
crates/rcc_cfg_transform/: Cargo.toml
crates/rcc_cfg_transform/src/: lib.rs
crates/rcc_codegen_llvm/: Cargo.toml  build.rs  build_support.rs
crates/rcc_codegen_llvm/src/: layout.rs  lib.rs
crates/rcc_codegen_llvm/tests/: llvm_filecheck.rs  llvm_ir_snapshots.rs  windows_llvm_c_linking.rs
crates/rcc_compiler_package/: Cargo.toml
crates/rcc_compiler_package/src/: main.rs
crates/rcc_conformance/: Cargo.toml
crates/rcc_conformance/src/: adapters.rs  lib.rs  metadata.rs  render.rs  xfail.rs
crates/rcc_conformance/tests/: chibicc_adapter.rs  ctestsuite_adapter.rs  gcc_torture_adapter.rs  llvm_test_suite_adapter.rs  render.rs  report_roundtrip.rs  tcc_tests2_adapter.rs  xfail_roundtrip.rs
crates/rcc_conformance/tests/fixtures/: .gitattributes
crates/rcc_conformance/tests/fixtures/render/: dashboard_expected.md  dashboard_input.md  sample_report.json
crates/rcc_data_structures/: Cargo.toml
crates/rcc_data_structures/src/: idx.rs  lib.rs
crates/rcc_driver/: Cargo.toml
crates/rcc_driver/benches/: pipeline.rs
crates/rcc_driver/src/: cli.rs  deps.rs  lib.rs  main.rs  pipeline.rs  toolchain.rs
crates/rcc_driver/tests/: backend_required.rs  builtin_rt.rs  debug_info.rs  dependency_files.rs  e2e.rs  emit_mir.rs  emit_snapshots.rs  emit_stages.rs  emit_tokens.rs  exit_status.rs  hosted_linux_headers.rs  link_invocation.rs  linker_flags.rs  misc_cli_flags.rs  multi_file.rs  output_policy.rs  response_files.rs  stop_flags.rs  target_cli.rs  toolchain.rs  ui.rs  warning_control.rs
crates/rcc_driver/tests/builtin-rt/: common_builtins.c  common_builtins.stdout  ctype_hosted_decl.c  ctype_hosted_decl.stdout  headers_limits_sizes.c  headers_limits_sizes.stdout  hosted_complex.c  hosted_complex.stdout  hosted_core_decls.c  hosted_core_decls.stdout  hosted_fenv.c  hosted_fenv.stdout  hosted_math_classification.c  hosted_math_classification.stdout  hosted_math_decls.c  hosted_math_decls.stdout  hosted_remaining_headers.c  hosted_remaining_headers.stdout  hosted_tgmath.c  hosted_tgmath.stdout  offsetof_layout.c  offsetof_layout.stdout  stdarg_sum.c  stdarg_sum.stdout  stdio_hosted_decl.c  stdio_hosted_decl.stdout
crates/rcc_driver/tests/e2e/: aggregate_bitfield_byval.c  aggregate_char_byte_view.c  aggregate_offsetof_nested_view.c  aggregate_struct_byvalue_pair.c  arith.c  bitfield_struct_stride.c  bitfield_struct_stride.stdout  block_scope_extern_global.c  char_const.c  compound_assign_lhs_once.c  function_call.c  function_names.c  global_init.c  gnu_control_flow.c  gnu_omitted_conditional.c  gnu_statement_expression.c  if_else.c  putchar_io.c  string_puts.c  uchar_index_wrap.c  varargs_long_double_overflow.c  varargs_mixed_register_overflow.c  varargs_va_end_side_effect.c  varargs_va_list_pointer_indirect.c  vla_backward_goto_dealloc.c  vla_parameter_bound_side_effects.c  while_sum.c  wide_bitfield_precision.c
crates/rcc_driver/tests/fixtures/: hello.c  pthread_runtime_smoke.c
crates/rcc_driver/tests/snapshots/ast/: common_hello.snap
crates/rcc_driver/tests/support/: mod.rs
crates/rcc_errors/: Cargo.toml
crates/rcc_errors/src/: builder.rs  codes.rs  emitter.rs  handler.rs  lib.rs  warning.rs
crates/rcc_errors/tests/: capture.rs  render.rs  warning_control.rs
crates/rcc_errors/tests/snapshots/: render__multi_file.snap  render__render__single_file.snap
crates/rcc_hir/: Cargo.toml
crates/rcc_hir/src/: layout.rs  lib.rs  pretty.rs  ty.rs
crates/rcc_hir_lower/: Cargo.toml
crates/rcc_hir_lower/src/: lib.rs
crates/rcc_hir_lower/tests/: hir_lower.rs
crates/rcc_lexer/: Cargo.toml
crates/rcc_lexer/benches/: lex.rs
crates/rcc_lexer/src/: cursor.rs  kinds.rs  lib.rs  line_splice.rs  pretty.rs  test_util.rs
crates/rcc_lexer/tests/: char_literal.rs  corpus.rs  cursor.rs  header_name.rs  identifier.rs  line_splice.rs  pp_number.rs  punctuator.rs  string_literal.rs  whitespace_comments.rs
crates/rcc_lexer/tests/common/: mod.rs
crates/rcc_parse/: Cargo.toml
crates/rcc_parse/benches/: parse.rs
crates/rcc_parse/src/: attr.rs  decl.rs  expr.rs  init.rs  keywords.rs  lib.rs  literal.rs  phase7.rs  scope.rs  stmt.rs  token.rs
crates/rcc_parse/tests/: ctestsuite_smoke.rs  grammar.rs
crates/rcc_preprocess/: Cargo.toml
crates/rcc_preprocess/benches/: preprocess.rs
crates/rcc_preprocess/src/: cond_stack.rs  directive.rs  expand.rs  guard.rs  if_eval.rs  include.rs  lib.rs  line_map.rs  line_stream.rs  macros.rs
crates/rcc_preprocess/tests/: chibicc.rs  expansion.rs
crates/rcc_session/: Cargo.toml
crates/rcc_session/src/: lib.rs
crates/rcc_session/tests/: for_test.rs
crates/rcc_span/: Cargo.toml
crates/rcc_span/src/: file.rs  lib.rs  pos.rs  source_map.rs  symbol.rs
crates/rcc_span/tests/: roundtrip.rs
crates/rcc_typeck/: Cargo.toml
crates/rcc_typeck/src/: const_eval.rs  init_const.rs  lib.rs  verify.rs  warnings.rs
crates/rcc_typeck/tests/: typeck.rs
fuzz/: Cargo.toml  README.md
fuzz/.cargo/: config.toml
fuzz/corpus/preprocess/: include-bundle.rccfuzz  preprocess-branching-include-cycle.rccfuzz  preprocess-recursive-include.rccfuzz
fuzz/fuzz_targets/: lex.rs  parse.rs  preprocess.rs
xtask/: Cargo.toml
xtask/src/: bench_runtime.rs  check_error_codes.rs  coverage.rs  fetch.rs  fuzz_regression.rs  lib.rs  main.rs  manifest.rs  release_bump.rs  release_check.rs  release_publish.rs  xfail_report.rs
xtask/tests/: error_codes.rs
(+678 files in other folders)
