[package]
name = "rcc_conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "External C test-suite runner and reporting"

[[bin]]
name = "cc_conformance_run"
path = "src/bin/cc_conformance_run.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tempfile   = { workspace = true }
toml       = { workspace = true }
