[package]
name = "rcc_conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "External C test-suite runner and reporting"

[[bin]]
name = "rcc_conformance_run"
path = "src/bin/rcc_conformance_run.rs"

[[bin]]
name = "rcc_conformance_render"
path = "src/bin/rcc_conformance_render.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tempfile   = { workspace = true }
toml       = { workspace = true }
