[package]
name = "rcc_hir_lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "AST -> HIR lowering: name resolution, declarator flattening"

[dependencies]
rcc_span            = { workspace = true }
rcc_errors          = { workspace = true }
rcc_session         = { workspace = true }
rcc_ast             = { workspace = true }
rcc_hir             = { workspace = true }
rcc_data_structures = { workspace = true }

[dev-dependencies]
rcc_lexer           = { workspace = true }
rcc_preprocess      = { workspace = true }
rcc_parse           = { workspace = true }
rcc_typeck          = { workspace = true }
