[package]
name = "rcc_lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "C preprocessing-token lexer (character stream -> pp-tokens)"

[dependencies]
rcc_span    = { workspace = true }
rcc_errors  = { workspace = true }
rcc_session = { workspace = true }
