[package]
name = "rcc_parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Recursive-descent + Pratt parser for C99"

[dependencies]
rcc_span            = { workspace = true }
rcc_errors          = { workspace = true }
rcc_session         = { workspace = true }
rcc_lexer           = { workspace = true }
rcc_ast             = { workspace = true }
rcc_data_structures = { workspace = true }

[dev-dependencies]
rcc_preprocess      = { workspace = true }
